# EasyPaper

./: IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  VERSION_CONTROL.md
.github/workflows/: build-release.yml  test-build.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  project.rs  svc_build.rs  svc_file.rs  svc_synctex.rs  svc_template.rs
app/src/components/: app-sidebar.tsx  breadcrumb.tsx
app/src/components/reactbits/: sidebar.tsx
app/src/ipc/: file-commands.ts  index.ts  types.ts
app/src/lib/: paths.ts  theme-context.tsx
app/src/modules/editor/: MonacoDiffEditor.tsx  MonacoEditor.tsx
app/src/modules/preview/: PDFViewer.tsx
app/src/modules/project/: FileTree.tsx  SidebarTabs.tsx
app/src/pages/: EditorPage.tsx  PaperDetailPage.tsx  SettingsPage.tsx  WelcomePage.tsx
app/src/store/: README.md  brand-store.ts  editor-store.ts  index.ts  project-store.ts
app/src/styles/: globals.css
