[package]
name = "easy_paper"
version = "0.1.0"
description = "EasyPaper - Paper Management Platform"
authors = ["Silan Hu(silan.hu@u.nus.edu)"]
license = "MIT"
repository = "https://github.com/Qingbolan/EasyPaper"
edition = "2021"

[lib]
name = "easy_paper_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
walkdir = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
